--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ input.horario{
 <tr>
  <th>Dia</th>
  <th>Semana</th>
- <th>Turno</th>
- <th>Horário</th>
+ <th>Turno / Legenda</th>
+ <th>Horário (editável)</th>
  <th>Horas</th>
 </tr>
 </thead>
@@ -108,6 +108,26 @@ meses.forEach((m,i)=>{
  mesSelect.add(o);
 });
 
+const turnosHoras={
+ "1":6,"2":6,"3":6,"4":6,
+ "23":12,"34":12,"41":12
+};
+
+const horariosPadrao={
+ "1":"00h às 06h",
+ "2":"06h às 12h",
+ "3":"12h às 18h",
+ "4":"18h às 00h",
+ "23":"06h às 18h",
+ "34":"12h às 00h",
+ "41":"18h às 06h"
+};
+
+const legendas=[
+ "FER","FOL","APR","TRÂ","INS","LUT",
+ "NUP","DIM","RSP","TAF","SAU"
+];
+
 function gerarDias(){
  const tbody=document.getElementById("dias");
  tbody.innerHTML="";
@@ -120,23 +140,27 @@ function gerarDias(){
   const data=new Date(ano,mes,d);
   const semana=["Dom","Seg","Ter","Qua","Qui","Sex","Sáb"][data.getDay()];
 
+  let options = `
+    <option></option>
+    <option>1</option><option>2</option>
+    <option>3</option><option>4</option>
+    <option>23</option><option>34</option><option>41</option>
+  `;
+
+  legendas.forEach(l=>{
+    options+=`<option>${l}</option>`;
+  });
+
   const tr=document.createElement("tr");
   tr.innerHTML=`
    <td>${d}</td>
    <td>${semana}</td>
    <td>
-    <select onchange="atualizarLinha(this)">
-     <option></option>
-     <option>1</option>
-     <option>2</option>
-     <option>3</option>
-     <option>4</option>
-     <option>TRÂ</option>
-     <option>APRE</option>
-     <option>F</option>
-    </select>
+     <select onchange="atualizarLinha(this)">
+       ${options}
+     </select>
    </td>
-   <td><input class="horario" placeholder="Auto ou editável"></td>
+   <td><input class="horario" placeholder="Editar se necessário"></td>
    <td class="horas">0</td>
   `;
   tbody.appendChild(tr);
@@ -147,27 +171,15 @@ function atualizarLinha(select){
  const linha=select.closest("tr");
  const campoHorario=linha.querySelector(".horario");
  const campoHoras=linha.querySelector(".horas");
- const turno=select.value;
+ const valor=select.value;
 
- let horas=0;
- let horario="";
-
- // Turnos combinados (41, 34, 23…)
- if(/^[1-4]{2,}$/.test(turno)){
-  horas=turno.length*6;
-  const mapa={1:"00h",2:"06h",3:"12h",4:"18h"};
-  horario=`${mapa[turno[0]]} às ${mapa[turno[turno.length-1]]}`;
+ if(turnosHoras[valor]){
+   campoHoras.innerText=turnosHoras[valor];
+   campoHorario.value=horariosPadrao[valor];
+ } else {
+   campoHoras.innerText=0;
+   campoHorario.value=valor ? valor : "";
  }
- else if(turno==="1"){horario="00h às 06h";horas=6;}
- else if(turno==="2"){horario="06h às 12h";horas=6;}
- else if(turno==="3"){horario="12h às 18h";horas=6;}
- else if(turno==="4"){horario="18h às 00h";horas=6;}
- else if(turno==="TRÂ"){horario="Trânsito";horas=6;}
- else if(turno==="APRE"){horario="APRE";horas=0;}
- else if(turno==="F"){horario="Folga";horas=0;}
-
- campoHorario.value=horario;
- campoHoras.innerText=horas;
 }
 
 function gerarPDF(){
@@ -184,7 +196,7 @@ function gerarPDF(){
   if(y>280){pdf.addPage();y=20;}
   const c=tr.children;
   pdf.text(
-   `${c[0].innerText} ${c[1].innerText} | Turno: ${c[2].innerText} | ${c[3].children[0].value} | ${c[4].innerText}h`,
+   `Dia ${c[0].innerText} (${c[1].innerText}) | ${c[2].innerText} | ${c[3].children[0].value} | ${c[4].innerText}h`,
    10,y
   );
   y+=6;
