--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@ input.horario{
  border:1px solid #444;
  padding:6px;
 }
+
+/* Rodapé */
+.footer-box{
+ margin:16px;
+ padding:12px;
+ background:#1e1e1e;
+ border-radius:8px;
+}
+
+.footer-box h3{
+ margin-top:0;
+ font-size:16px;
+ color:#90caf9;
+}
+
+.legend{
+ font-size:13px;
+ line-height:1.6;
+}
 </style>
 </head>
 
@@ -86,20 +105,44 @@ input.horario{
  <th>Dia</th>
  <th>Semana</th>
  <th>Turno / Legenda</th>
- <th>Horário (editável)</th>
+ <th>Horário</th>
  <th>Horas</th>
 </tr>
 </thead>
 <tbody id="dias"></tbody>
 </table>
 
+<!-- RESUMO -->
+<div class="footer-box">
+ <h3>📊 Resumo Mensal</h3>
+ <p><b>Carga Horária:</b> <span id="totalHoras">0</span> h</p>
+ <p><b>Hora Extra:</b> <span id="horaExtra">0</span> h</p>
+ <p><b>Pecúnia Extra:</b> R$ <span id="valorExtra">0,00</span></p>
+</div>
+
+<!-- LEGENDAS -->
+<div class="footer-box">
+ <h3>📌 Legendas</h3>
+ <div class="legend">
+  FER – Férias<br>
+  FOL – Folga<br>
+  APR – Apresentação<br>
+  TRÂ – Trânsito<br>
+  INS – Instrução<br>
+  LUT – Luto<br>
+  NUP – Núcleo Psicossocial<br>
+  DIM – Diminuição<br>
+  RSP – Resposta<br>
+  TAF – Teste Aptidão Física<br>
+  SAU – Saúde
+ </div>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
-const meses=[
- "Janeiro","Fevereiro","Março","Abril","Maio","Junho",
- "Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"
-];
+const meses=["Janeiro","Fevereiro","Março","Abril","Maio","Junho",
+"Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
 
 const mesSelect=document.getElementById("mes");
 meses.forEach((m,i)=>{
@@ -108,30 +151,18 @@ meses.forEach((m,i)=>{
  mesSelect.add(o);
 });
 
-const turnosHoras={
- "1":6,"2":6,"3":6,"4":6,
- "23":12,"34":12,"41":12
-};
+const turnosHoras={"1":6,"2":6,"3":6,"4":6,"23":12,"34":12,"41":12};
 
 const horariosPadrao={
- "1":"00h às 06h",
- "2":"06h às 12h",
- "3":"12h às 18h",
- "4":"18h às 00h",
- "23":"06h às 18h",
- "34":"12h às 00h",
- "41":"18h às 06h"
+ "1":"00h às 06h","2":"06h às 12h","3":"12h às 18h","4":"18h às 00h",
+ "23":"06h às 18h","34":"12h às 00h","41":"18h às 06h"
 };
 
-const legendas=[
- "FER","FOL","APR","TRÂ","INS","LUT",
- "NUP","DIM","RSP","TAF","SAU"
-];
+const legendas=["FER","FOL","APR","TRÂ","INS","LUT","NUP","DIM","RSP","TAF","SAU"];
 
 function gerarDias(){
  const tbody=document.getElementById("dias");
  tbody.innerHTML="";
-
  const ano=document.getElementById("ano").value;
  const mes=mesSelect.value;
  const totalDias=new Date(ano,parseInt(mes)+1,0).getDate();
@@ -140,31 +171,22 @@ function gerarDias(){
   const data=new Date(ano,mes,d);
   const semana=["Dom","Seg","Ter","Qua","Qui","Sex","Sáb"][data.getDay()];
 
-  let options = `
-    <option></option>
-    <option>1</option><option>2</option>
-    <option>3</option><option>4</option>
-    <option>23</option><option>34</option><option>41</option>
-  `;
+  let options=`<option></option>
+  <option>1</option><option>2</option><option>3</option><option>4</option>
+  <option>23</option><option>34</option><option>41</option>`;
 
-  legendas.forEach(l=>{
-    options+=`<option>${l}</option>`;
-  });
+  legendas.forEach(l=>options+=`<option>${l}</option>`);
 
   const tr=document.createElement("tr");
   tr.innerHTML=`
    <td>${d}</td>
    <td>${semana}</td>
-   <td>
-     <select onchange="atualizarLinha(this)">
-       ${options}
-     </select>
-   </td>
-   <td><input class="horario" placeholder="Editar se necessário"></td>
-   <td class="horas">0</td>
-  `;
+   <td><select onchange="atualizarLinha(this)">${options}</select></td>
+   <td><input class="horario"></td>
+   <td class="horas">0</td>`;
   tbody.appendChild(tr);
  }
+ calcularTotais();
 }
 
 function atualizarLinha(select){
@@ -174,34 +196,45 @@ function atualizarLinha(select){
  const valor=select.value;
 
  if(turnosHoras[valor]){
-   campoHoras.innerText=turnosHoras[valor];
-   campoHorario.value=horariosPadrao[valor];
- } else {
-   campoHoras.innerText=0;
-   campoHorario.value=valor ? valor : "";
+  campoHoras.innerText=turnosHoras[valor];
+  campoHorario.value=horariosPadrao[valor];
+ }else{
+  campoHoras.innerText=0;
+  campoHorario.value=valor;
  }
+ calcularTotais();
+}
+
+function calcularTotais(){
+ let total=0;
+ document.querySelectorAll(".horas").forEach(h=>{
+  total+=parseInt(h.innerText)||0;
+ });
+
+ const mes=mesSelect.value;
+ const ano=document.getElementById("ano").value;
+ const diasMes=new Date(ano,parseInt(mes)+1,0).getDate();
+ const limite=diasMes===31?177:171;
+
+ const extra=Math.max(0,total-limite);
+ const valor=(extra*46.37).toFixed(2).replace(".",",");
+
+ document.getElementById("totalHoras").innerText=total;
+ document.getElementById("horaExtra").innerText=extra;
+ document.getElementById("valorExtra").innerText=valor;
 }
 
 function gerarPDF(){
  const {jsPDF}=window.jspdf;
- const pdf=new jsPDF("p","mm","a4");
-
- pdf.setFontSize(16);
+ const pdf=new jsPDF();
  pdf.text("RELATÓRIO DE ESCALA POLICIAL",105,15,{align:"center"});
-
  let y=25;
- pdf.setFontSize(10);
-
  document.querySelectorAll("#dias tr").forEach(tr=>{
   if(y>280){pdf.addPage();y=20;}
   const c=tr.children;
-  pdf.text(
-   `Dia ${c[0].innerText} (${c[1].innerText}) | ${c[2].innerText} | ${c[3].children[0].value} | ${c[4].innerText}h`,
-   10,y
-  );
+  pdf.text(`${c[0].innerText} (${c[1].innerText}) - ${c[2].innerText} - ${c[4].innerText}h`,10,y);
   y+=6;
  });
-
  pdf.save("escala_policial.pdf");
 }
 </script>
