--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ input.horario{
   FOL – Folga<br>
   APR – Apresentação<br>
   TRÂ – Trânsito<br>
-  INS – Instrução<br>
+  INS – Instalação<br>
   LUT – Luto<br>
-  NUP – Núcleo Psicossocial<br>
-  DIM – Diminuição<br>
-  RSP – Resposta<br>
+  NUP – Núpcias<br>
+  DIM – Dispensa Médica<br>
+  RSP – Dispensa por Recompensa<br>
   TAF – Teste Aptidão Física<br>
-  SAU – Saúde
+  SAU – Inspeção de Saúde
  </div>
 </div>
 
