Update terms in index.html for accuracy

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@ input.horario{
  TRÂ – Trânsito<br>
  INS – Instrução<br>
  LUT – Luto<br>
- NUP – Núcleo Psicossocial<br>
- DIM – Diminuição<br>
- RSP – Resposta<br>
+ NUP – Núpcias<br>
+ DIM – Dispensa Médica<br>
+ RSP – Dispensa por Recompensa<br>
  TAF – Teste Aptidão Física<br>
- SAU – Saúde
+ SAU – Inspeção de Saúde
  </div>
 </div>
 
